--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
         </dependency> 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>human-resource-management-lib</artifactId>
+            <version>1.0.0</version>
+        </dependency>      
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>client-management-lib</artifactId>
             <version>1.0.0</version>
             <type>jar</type>
